# Book-store-API

./: .gitignore  Makefile  README.md  To-do.txt  alembic.ini  main.py  pyproject.toml  pytest.ini  test.py
alembic/: env.py
alembic/versions/: c87bd7b4d007_create_users_table.py
app/: config.py  main.py
app/api/: auth.py  books.py  order.py  users.py
app/core/: dependencies.py
app/db/: session.py
app/models/: __init__.py  book.py  order.py  user.py
app/repositories/: book_repository.py  order_reository.py  order_repository.py  user_repository.py
app/schemas/: book.py  order.py  user.py
app/services/: auth_service.py  book_service.py  order_service.py  user_service.py
app/tests/: conftest.py  test_auth.py  test_books.py  test_orders.py  test_users.py
migrations/: env.py
migrations/versions/: 4a8aeaaa7448_add_unique_constraint_to_books.py  d70621965e47_create_initial_tables.py  f39bb773fe33_create_initial_tables.py
